@@ -97,6 +97,7 @@
 	- splint annotationsm, signature cleanup.
 	- drill ts/fi through verify mode, add methods to keep fi abstract.
 	- use mmap when calculating file digests on verify, ~20% faster.
+	- permit --dbpath and --root with signature (i.e. --import) modes.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
